--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,41 +1,53 @@
-name: CI Jobs
+name: Combined CI/CD Workflow
+
+env:
+    RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+    RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
 
 on:
-#    push:
-#       branches: [dev]
-    pull_request:
-        branches: [dev, main]
+  push:
+    branches:
+      - main
+  pull_request:
+    branches: [dev, main]
 
 jobs:
-    build:
+  ci:
+    runs-on: ubuntu-latest
 
-        runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
 
-        strategy:
-            matrix:
-                node-version: [18.x]
-            
-        steps:
-        - name: Checkout repository
-          uses: actions/checkout@v2
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-        - name: Setup Node.js ${{matrix.node-version}}
-          uses: actions/setup-node@v1
-          with:
-            node-version: ${{matrix.node-version}}
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-        - name: Install dependencies
-          run: |
-            cd $GITHUB_WORKSPACE/client
-            npm install
-        
-        # - name: Run the tests
-        #   run: |
-        #     cd $GITHUB_WORKSPACE/sa-client
-        #     npm test
+      - name: Install dependencies
+        run: |
+          npm run install-client
 
-        - name: Build
-          run: |
-           cd $GITHUB_WORKSPACE/client
-           npm run build
-        
+      - name: Build
+        run: |
+          npm run build-client
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: ci
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Deploy to Preview Environment
+        run: |
+          curl -X POST \
+          -H 'Accept: application/json' \
+          -H 'Authorization: Bearer $RENDER_API_KEY' \
+          -d '' \
+          https://api.render.com/v1/services/$RENDER_DEPLOY_HOOK_URL/deploys
